Add more static content to test site

--- a/tests/templates/tests/home_view.html
+++ b/tests/templates/tests/home_view.html
@@ -7,4 +7,6 @@
     <li><a href="{% url 'article_list' %}">Articles</a>
     <li><a href="{% url 'author_list' %}">Authors</a>
 </ul>
+
+<img src="/static/dark-thistle.jpg">
 {% endblock %}
