--- a/tests/templates/tests/base.html
+++ b/tests/templates/tests/base.html
@@ -3,11 +3,15 @@
 <!doctype html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css">
         <link rel="stylesheet" href="{% static 'main.css' %}" />
+
+        <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+        <script src="{% static 'main.js' %}"></script>
     </head>
 
     <body>
-        <div>{% block content %}{% endblock content %}</div>
+        <div class="container">{% block content %}{% endblock content %}</div>
     </body>
 </html>
 
